[NO ISSUE][*DB] Rebalance and tweak test distribution
Ext-Ref: MB-65056

Change-Id: I554cff7048046d29606e966dc2bafac47304bb1a
Reviewed-on: https://asterix-gerrit.ics.uci.edu/c/asterixdb/+/19367
Integration-Tests: Jenkins <jenkins@fulliautomatix.ics.uci.edu>
Reviewed-by: Michael Blow <mblow@apache.org>
Tested-by: Jenkins <jenkins@fulliautomatix.ics.uci.edu>