@@ -308,8 +308,6 @@
                 <argument>15055</argument>
                 <argument>--location</argument>
                 <argument>${project.build.directory}/azurite</argument>
-                <argument>--debug</argument>
-                <argument>${project.build.directory}/azurite/logs/azurite-debug.log</argument>
               </arguments>
               <async>true</async>
               <outputFile>${project.build.directory}/azurite/logs/azurite.log</outputFile>
@@ -483,48 +481,26 @@
     <profile>
       <id>asterix-gerrit-asterix-app</id>
       <properties>
-        <test.excludes>**/CloudStorageTest.java,**/CloudStorageGCSTest.java,**/SqlppExecutionWithCancellationTest.java,**/DmlTest.java,**/RepeatedTest.java,**/SqlppExecutionTest.java,**/SqlppExecutionColumnTest.java,**/*StaticPartitioning*Test.java,**/*Ssl*Test.java,**/Podman*.java,**/*AnalyzedExecutionTest.java,**/SqlppProfiledExecutionTest.java,**/CloudPythonTest.java,**/CloudStorageAzTest.java</test.excludes>
+        <test.excludes>
+          **/CloudStorageTest.java,**/CloudStorageGCSTest.java,**/CloudStorageUnstableTest.java,
+          **/SqlppExecutionWithCancellationTest.java,**/DmlTest.java,**/RepeatedTest.java,**/SqlppExecutionTest.java,
+          **/SqlppExecutionColumnTest.java,**/*StaticPartitioning*Test.java,**/*Ssl*Test.java,**/Podman*.java,
+          **/*AnalyzedExecutionTest.java,**/SqlppProfiledExecutionTest.java,**/CloudPythonTest.java,
+          **/CloudStorageAzTest.java,**/AzureBlobStorageExternalDatasetTest.java,
+          **/AzureBlobStorageExternalDatasetOnePartitionTest.java,**/SqlppSinglePointLookupExecutionTest.java,
+          **/Atomic*.java, **/AwsS3*.java, **/*SqlppHdfs*.java, **/*RQG*.java, **/*RQJ*.java
+        </test.excludes>
         <itest.excludes>**/*.java</itest.excludes>
       </properties>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-surefire-plugin</artifactId>
-            <executions>
-              <execution>
-                <id>SqlppExecutionTest</id>
-                <configuration>
-                  <excludes combine.self="override"/>
-                  <argLine>
-                    -enableassertions -Xmx${test.heap.size}m
-                    -Dfile.encoding=UTF-8
-                    -Xdebug
-                    -Xrunjdwp:transport=dt_socket,server=y,address=8000,suspend=${debug.suspend.flag}
-                    -Xloggc:"${project.build.directory}/surefire-reports/SqlppExecutionTest-%p-gc.log" -XX:+PrintGC
-                    --add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED
-                    --add-opens=java.management/sun.management=ALL-UNNAMED
-                    --add-opens=java.base/java.lang=ALL-UNNAMED
-                    --add-opens=java.base/java.nio=ALL-UNNAMED
-                    --add-opens=java.base/java.util=ALL-UNNAMED
-                    --add-opens=java.base/java.io=ALL-UNNAMED
-                    --add-opens=java.base/sun.nio.ch=ALL-UNNAMED
-                  </argLine>
-                </configuration>
-                <goals>
-                  <goal>test</goal>
-                </goals>
-              </execution>
-            </executions>
-          </plugin>
-        </plugins>
-      </build>
     </profile>
     <profile>
       <id>asterix-gerrit-asterix-app-sql-execution</id>
       <properties>
+        <test.includes>**/SqlppProfiledExecutionTest.java,**/SqlppExecutionTest.java</test.includes>
         <test.excludes>**/*.java</test.excludes>
-        <itest.includes>**/SqlppExecution*IT.java,**/ExternalPythonFunctionIT.java,**/CloudPythonTest.java</itest.includes>
+        <itest.includes>
+          **/SqlppExecution*IT.java,**/ExternalPythonFunctionIT.java,**/CloudPythonTest.java
+        </itest.includes>
         <failIfNoTests>false</failIfNoTests>
       </properties>
     </profile>
@@ -532,6 +508,7 @@
       <id>asterix-gerrit-asterix-app-sql-rqg</id>
       <properties>
         <test.excludes>**/*.java</test.excludes>
+        <test.includes>**/*RQG*.java, **/*RQJ*.java</test.includes>
         <itest.includes>**/SqlppRQG*IT.java</itest.includes>
         <failIfNoTests>false</failIfNoTests>
       </properties>
@@ -539,7 +516,10 @@
     <profile>
       <id>asterix-gerrit-ssl-compression</id>
       <properties>
-        <test.includes>**/*StaticPartitioning*Test.java,**/*Ssl*Test.java,**/*AnalyzedExecutionTest.java,**/SqlppExecutionColumnTest.java</test.includes>
+        <test.includes>
+          **/*StaticPartitioning*Test.java,**/*Ssl*Test.java,**/*AnalyzedExecutionTest.java,
+          **/SqlppExecutionColumnTest.java, **/Atomic*.java
+        </test.includes>
         <itest.excludes>**/*.java</itest.excludes>
         <failIfNoTests>false</failIfNoTests>
       </properties>
@@ -547,7 +527,7 @@
     <profile>
       <id>asterix-gerrit-verify-asterix-app</id>
       <properties>
-        <test.includes>**/SqlppProfiledExecutionTest.java</test.includes>
+        <test.excludes>**/*.java</test.excludes>
         <itest.excludes>**/External*IT.java,**/SqlppExecution*IT.java,**/SqlppRQG*IT.java,**/RebalanceWithCancellationIT.java</itest.excludes>
         <failIfNoTests>false</failIfNoTests>
       </properties>
@@ -556,7 +536,30 @@
       <id>asterix-gerrit-rebalance-cancellation</id>
       <properties>
         <test.excludes>**/*.java</test.excludes>
+        <test.includes>**/RebalanceWithCancellationIT.java</test.includes>
         <itest.includes>**/RebalanceWithCancellationIT.java</itest.includes>
+        <failIfNoTests>false</failIfNoTests>
+      </properties>
+    </profile>
+    <profile>
+      <id>asterix-gerrit-cloud-tests</id>
+      <properties>
+        <test.excludes>**/*.java</test.excludes>
+        <test.includes>
+          **/CloudStorageTest.java, **/CloudStorageUnstableTest.java,
+          **/SqlppSinglePointLookupExecutionTest.java, **/AwsS3*.java
+        </test.includes>
+        <failIfNoTests>false</failIfNoTests>
+      </properties>
+    </profile>
+    <profile>
+      <id>asterix-gerrit-cloud-nons3-tests</id>
+      <properties>
+        <test.excludes>**/*.java</test.excludes>
+        <test.includes>
+          **/CloudStorageGCSTest.java, **/CloudStorageAzTest.java,**/AzureBlobStorageExternalDatasetTest.java,
+          **/AzureBlobStorageExternalDatasetOnePartitionTest.java, **/*SqlppHdfs*.java
+        </test.includes>
         <failIfNoTests>false</failIfNoTests>
       </properties>
     </profile>
